# easyaz

./: LICENSE  README.md  setup.cfg  setup.py
examples/: openaiwithaad.py
src/easyaz/: core.py  openai.py
