[metadata]
name = easyaz
version = attr: easyaz.VERSION
author = Johan Stenberg
author_email = johan.stenberg@live.com
description = Simple integrations with various Azure services
long_description = file: README.md, LICENSE
keywords = Azure
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = True
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
